[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/farm_art/tomato.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlantAttributes.gd" type="Script" id=2]
[ext_resource path="res://scripts/ItemMovement.gd" type="Script" id=3]
[ext_resource path="res://scripts/Item.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 30.1241

[node name="SeedItem" type="Node2D"]
z_index = 1
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.290476, 0.313914 )
texture = ExtResource( 1 )

[node name="PlantAttributes" type="Node2D" parent="."]
position = Vector2( -300, -36.345 )
script = ExtResource( 2 )

[node name="DraggedThing" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DraggedThing"]
position = Vector2( 0.431824, 4.66264 )
shape = SubResource( 1 )
[connection signal="DroppedField" from="DraggedThing" to="." method="_on_DraggedThing_DroppedField"]
[connection signal="DroppedInventory" from="DraggedThing" to="." method="_on_DraggedThing_DroppedInventory"]
[connection signal="DroppedMonster" from="DraggedThing" to="." method="_on_DraggedThing_DroppedMonster"]
[connection signal="DroppedTrash" from="DraggedThing" to="." method="_on_DraggedThing_DroppedTrash"]
[connection signal="input_event" from="DraggedThing" to="DraggedThing" method="click_drag_event"]
