[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/farm_art/tomato.png" type="Texture" id=1]
[ext_resource path="res://scripts/ItemMovement.gd" type="Script" id=2]
[ext_resource path="res://scripts/Item.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 30.1241

[node name="UsableItem" type="Node2D"]
z_index = 1
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.431373, 0.941176, 0.129412, 1 )
self_modulate = Color( 0.427451, 0.772549, 0.152941, 1 )
scale = Vector2( 0.290476, 0.313914 )
texture = ExtResource( 1 )

[node name="DraggedThing" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DraggedThing"]
visible = false
position = Vector2( 0.431824, 4.66264 )
shape = SubResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = -30.0
margin_top = -29.0
margin_right = 30.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="DroppedField" from="DraggedThing" to="." method="_on_DraggedThing_DroppedField"]
[connection signal="DroppedInventory" from="DraggedThing" to="." method="_on_DraggedThing_DroppedInventory"]
[connection signal="DroppedMonster" from="DraggedThing" to="." method="_on_DraggedThing_DroppedMonster"]
[connection signal="DroppedTrash" from="DraggedThing" to="." method="_on_DraggedThing_DroppedTrash"]
[connection signal="gui_input" from="Control" to="DraggedThing" method="_on_Control_gui_input"]
